fixed text wrapping

--- a/src/style/bios.css
+++ b/src/style/bios.css
@@ -1,4 +1,3 @@
-
 .bios {
   overflow: hidden;
   white-space: nowrap;
@@ -6,25 +5,21 @@
   display: flex;
 }
 
-
 .left-half {
   height: 100%;
-  /* //display: table-cell; */
-  width: 50%;
+  width: 20%;
   display: flexbox;
-
 }
 
 .right-half {
-  /* //display: table-cell; */
+  
   position:relative;
   display: flexbox;
   flex-wrap:wrap;
-
+  width: 78.4%
 }
 
 .img-container{
-
 }
 
 .bios-img{
@@ -34,4 +29,5 @@
 }
 
 .bios-desc{
+  white-space: normal;
 }
